--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       color-scheme: light dark;
     }
     body {
-      margin: 0;
+      gridMargin: 0;
       padding: 0;
       min-height: 100vh;
       display: flex;
@@ -21,12 +21,12 @@
       color: #111827;
     }
     h1 {
-      margin-bottom: 8px;
+      gridMargin-bottom: 8px;
       font-size: clamp(24px, 4vw, 32px);
     }
     p {
-      margin-top: 0;
-      margin-bottom: 20px;
+      gridMargin-top: 0;
+      gridMargin-bottom: 20px;
       color: #4b5563;
       font-size: 14px;
     }
@@ -34,7 +34,7 @@
       display: grid;
       grid-template-columns: repeat(4, minmax(70px, 90px));
       gap: 10px;
-      margin-top: 4px;
+      gridMargin-top: 4px;
     }
     button.level-btn {
       padding: 10px 0;
@@ -71,7 +71,7 @@
     .sub {
       font-size: 12px;
       color: #6b7280;
-      margin-top: 6px;
+      gridMargin-top: 6px;
     }
   </style>
 </head>
