--- a/game.html
+++ b/game.html
@@ -129,6 +129,29 @@
       font-weight: 600;
       color: var(--accent);
     }
+    @media (max-width: 640px) {
+  body {
+    align-items: stretch;   /* 가운데 정렬 대신 전체 폭 사용 */
+  }
+
+  main {
+    margin-top: 0;          /* 위쪽 여백 제거 → 화면 상단에 딱 붙게 */
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  main canvas {
+    max-width: 100vw;       /* 혹시라도 넘치지 않게 */
+  }
+
+  #ui {
+    width: 100%;
+    max-width: 100%;
+    padding: 0 12px 16px;   /* 버튼/텍스트는 좌우 약간만 여백 */
+  }
+}
+
   </style>
 
 </head>
@@ -319,23 +342,43 @@ let confetti = [];
     // ====== P5 SETUP / DRAW ======
 
 
+// 화면 크기에 맞춰 캔버스 크기 조정
+function updateCanvasSize() {
+  // 가로는 뷰포트 전체 사용
+  const sizeByWidth = windowWidth;        // ⬅️ 0.9 → 1.0
 
-        function updateCanvasSize() {
-        // 화면 가로/세로에 맞춰 캔버스 한 변 길이 계산
-        const sizeByWidth  = windowWidth * 0.9;   // 좌우 여백 10%
-        const sizeByHeight = windowHeight * 0.55; // 아래 UI 영역 남겨두기
+  // 세로는 아래 UI 영역을 생각해서 60% 정도만 사용
+  const sizeByHeight = windowHeight * 0.6;
 
-        canvasSize = Math.min(BASE_CANVAS_SIZE, sizeByWidth, sizeByHeight);
+  // 데스크톱에서는 최대 700, 모바일에서는 화면에 맞게 줄어듦
+  canvasSize = Math.min(BASE_CANVAS_SIZE, sizeByWidth, sizeByHeight);
 
-        // 마진도 비율대로 줄이기
-        gridMargin = (BASE_MARGIN / BASE_CANVAS_SIZE) * canvasSize;
+  resizeCanvas(canvasSize, canvasSize);
 
-        resizeCanvas(canvasSize, canvasSize);
+  // 캔버스가 줄어든 만큼 margin도 비율로 맞추기
+  gridMargin = canvasSize * 0.07;   // 필요하면 0.06~0.08 사이로 조절
+  spacing = (canvasSize - 2 * gridMargin) / (GRID_SIZE - 1);
+}
 
-        // spacing & 포인트 좌표 갱신
-        spacing = (canvasSize - 2 * gridMargin) / (GRID_SIZE - 1);
-        initGrid();
-        }
+// setup 안에서 한 번 호출
+function setup() {
+  const canvas = createCanvas(canvasSize, canvasSize);
+  canvas.parent(document.querySelector("main"));
+
+  updateCanvasSize();   // ⬅️ 추가/유지
+
+  textFont("system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif");
+  initGrid();
+  initLevelFromQuery();
+  cacheDom();
+  initGameState();
+}
+
+// 창 크기 바뀔 때마다 다시 맞추기
+function windowResized() {
+  updateCanvasSize();
+}
+
 
 function setup() {
   // 일단 임시 크기로 만든 뒤, updateCanvasSize에서 실제 크기 맞추기
